# FinLib

./: .gitignore  ARCHITECTURE.md  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  README.md  \  pyproject.toml
finAppImplementation/: CMakeLists.txt
finAppImplementation/include/converters/: ProtoConverters.hpp
finAppImplementation/include/grpcServiceImplementation/: LoggingInterceptor.hpp  PortfolioGrpcServiceImpl.hpp
finAppImplementation/protoFiles/: portfolio.proto
finAppImplementation/src/: PortfolioGrpcServiceImpl.cpp  main.cpp
finTUI/: CMakeLists.txt
finTUI/include/finTUI/: AppShell.hpp
finTUI/include/finTUI/FinTuiElements/: Dialogs.hpp
finTUI/include/finTUI/dataSources/: GrpcPortfolioDataSource.hpp  IPortfolioDataSource.hpp
finTUI/include/finTUI/finTuiUtils/: CurrencyUtils.hpp  DateUtils.hpp  FinTuiUtils.hpp  FormatUtils.hpp  PortfolioUtils.hpp  TuiChartUtils.hpp  Utils.hpp
finTUI/include/finTUI/modules/: IModule.hpp
finTUI/include/finTUI/modules/portfolioModule/: ChartPane.hpp  Dialogs.hpp  PortfolioModule.hpp  PortfolioModuleTypes.hpp  TransactionsPane.hpp
finTUI/include/finTUI/uiComponents/: TUIFormDialog.hpp  TuiConfirmationDialog.hpp  TuiFileDialog.hpp  TuiFormDialog.hpp  TuiLineChart.hpp  TuiTabbedPanel.hpp  TuiTable.hpp
finTUI/src/: AppShell.cpp  GrpcPortfolioDataSource.cpp  main.cpp
finTUI/src/dataSources/: GrpcPortfolioDataSource.cpp
finTUI/src/finTuiElements/: Dialogs.cpp
finTUI/src/finTuiUtils/: CurrencyUtils.cpp  DateUtils.cpp  FinTuiUtils.cpp  FormatUtils.cpp  TuiChartUtils.cpp
finTUI/src/modules/portfolioModule/: ChartPane.cpp  Dialogs.cpp  PortfolioModule.cpp  TransactionsPane.cpp
finTUI/src/uiComponents/: TUIFormDialog.cpp  TuiConfirmationDialog.cpp  TuiFileDialog.cpp  TuiFormDialog.cpp  TuiLineChart.cpp  TuiTabbedPanel.cpp  TuiTable.cpp
finapp/: CMakeLists.txt
finapp/include/finapp/common/logger/: ConsoleLogger.hpp  ILogger.hpp  PrefixedLogger.hpp
finapp/include/finapp/data/importers/: YahooFinanceImporter.hpp
finapp/include/finapp/data/providers/implementations/Yfinance/: YFinanceEquityProvider.hpp  YFinanceProvider.hpp  YfinanceUtils.hpp
finapp/include/finapp/data/providers/interfaces/: IAssetProviders.hpp
finapp/include/finapp/data/repository/: IAssetRepository.hpp  IPortfolioRepository.hpp
finapp/include/finapp/data/repository/interface/: IAssetRepository.hpp  IFXRepository.hpp  IPortfolioRepository.hpp
finapp/include/finapp/finance/analysis/: EquityAnalysis.hpp  IAssetAnalysis.hpp
finapp/include/finapp/finance/asset/: AssetType.hpp  Cash.hpp  Equity.hpp  IAsset.hpp
finapp/include/finapp/finance/common/: AssetId.hpp  Currency.hpp
finapp/include/finapp/finance/portfolio/: Portfolio.hpp  PortfolioSnapshot.hpp  Transaction.hpp
finapp/include/finapp/providers/: YFinanceProvider.hpp
finapp/include/finapp/service/: AnalysisService.hpp  AssetService.hpp  FXService.hpp  IAssetService.hpp  PortfolioService.hpp
finapp/scripts/: YFinanceFetcher.py  YFinance_loader.py
finapp/src/data/importers/: YahooFinanceImporter.cpp
finapp/src/data/providers/: YFinanceProvider.cpp
finapp/src/data/providers/Yfinance/: YFinanceEquityProvider.cpp  YFinanceProvider.cpp
finapp/src/data/repository/implementation/CsvRepository/: CSVCashRepository.cpp  CSVEquityRepository.cpp  CSVFXRepository.cpp  CSVPortfolioRepository.cpp
finapp/src/finance/analysis/: EquityAnalysis.cpp
finapp/src/finance/portfolio/: Portfolio.cpp
finapp/src/providers/: YFinanceProvider.cpp
finapp/src/service/: AnalysisService.cpp  AssetService.cpp  FXService.cpp  PortfolioService.cpp
finlib/: CMakeLists.txt
finlib/include/finlib/common/logger/: ConsoleLogger.hpp  ILogger.hpp  LogMacros.hpp  PrefixedLogger.hpp
finlib/include/finlib/common/utils/: TimeSeriesUtils.hpp
finlib/include/finlib/core/: TimeSeries.hpp  TimeSeriesView.hpp
finlib/include/finlib/data/: CoverageInfo.hpp  SeriesKey.hpp
finlib/include/finlib/data/implementation/: CSVRepository.hpp  CachedTimeSeriesRepository.hpp  InMemoryTimeSeriesRepository.hpp
finlib/include/finlib/data/interfaces/: ITimeSeriesLoader.hpp  ITimeSeriesSaver.hpp
finlib/include/finlib/data/services/: TimeSeriesService.hpp
finlib/include/finlib/models/interfaces/: BaseRegressionModel.hpp  IClassificationModel.hpp  IModel.hpp  IMultivariateRegressionModel.hpp  IProbabilisticModel.hpp  IRegressionModel.hpp
finlib/include/finlib/models/timeseries/regression/: ARModel.hpp
finlib/include/finlib/session/: AppContext.hpp  ModelSession.hpp  TimeSeriesSession.hpp
finlib/src/core/: StatsCore.cpp  TimeSeries.cpp  TimeSeriesView.cpp
finlib/src/data/: CSVRepository.cpp  TimeSeriesService.cpp
finlib/src/models/timeseries/regression/: ARModel.cpp
finlib/src/session/: ModelSession.cpp  TimeSeriesSession.cpp
finlib/src/utils/: LoggerUtils.cpp  TimeSeriesUtils.cpp
src/: CMakeLists.txt
src/analysis/: TimeSeriesAnalysis.cpp
src/core/: TimeSeries.cpp  TimeSeriesView.cpp  stats.cpp
src/data/: CSVRepository.cpp  TimeSeriesService.cpp  YFinanceProvider.cpp
src/models/: ARModel.cpp  BaseModel.cpp  IModel.cpp
src/models/interfaces/: EvaluationResult.cpp
src/models/timeseries/regression/: ARModel.cpp
src/scripts/: YFinance_loader.py
src/session/: ModelSession.cpp
src/utils/: TimeUtils.cpp  time.cpp
tests/finapp_tests/: CMakeLists.txt  asset_service_test.cpp  csv_cash_repository_test.cpp  csv_equity_repository_test.cpp  csv_fx_repository_test.cpp  csv_portfolio_repository_test.cpp  fx_service_test.cpp  portfolio_service_test.cpp  portfolio_tracking_live_test.cpp  portfolio_tracking_math_test.cpp  test_yfinance_provider.cpp
tests/finapp_tests/resources/: portfolio NISA.csv  portfolio PEA.csv
tests/finapp_tests/support/: service_test_fakes.hpp
tests/integration_tests/: CMakeLists.txt  csv_repository_test.cpp  test_yfinance_provider.cpp
tests/unit_tests/: CMakeLists.txt  ar_model_test.cpp  model_session_test.cpp  operation_test  time_series_analysis_test.cpp  time_series_operation_test.cpp  time_series_resampling_test.cpp  time_series_stats_test.cpp  time_series_view_test.cpp
(+66 files in other folders)
